# Pepp

./: .clang-format  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  .lfsconfig  .mailmap  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HELP  NOTICE  README.md  chighlighter.cpp  doxyfile.in  helper.sh  license.qrc  main.cpp  main.py  p4.py  pepcpu8highlighter.cpp  pepcpu8highlighter.h  pepcpu9highlighter.cpp  pepcpu9highlighter.h  pyproject.toml  resource_license.qrc  sonar-project.properties  test.py  todo.txt  vcpkg.json
core/: CMakeLists.txt
core/bitmanip/: copy.cpp  log2.cpp  strings.cpp
core/core/: architectures.cpp  architectures.hpp  integers_fixed_point.hpp  macros.hpp
core/elf/: packed_access_array.hpp  packed_access_headers.hpp  packed_fixup.hpp  packed_ops.hpp  packed_storage.cpp  packed_storage.hpp
core/libs/: mapped_file.cpp  mapped_file.hpp
core/microarch/: pep.cpp  pep.hpp
lexilla/: CMakeLists.txt
lexilla/include/: LexicalStyles.iface  SciLexer.h  lexilla_globals.h
lexilla/lexers/: LexPepp.cxx  LexerNull.cxx  LexerPepp.cxx
lexilla/lexlib/: Accessor.cxx  Accessor.h  CharacterCategory.h  CharacterSet.h  DefaultLexer.cxx  InList.cxx  InList.h  LexAccessor.h  LexerModule.h  OptionSet.h  PropSetSimple.h  SparseState.h  StringCopy.h  SubStyles.h
lexilla/src/: Lexilla.cxx  deps.mak  lexilla.mak  nmdeps.mak
lexilla/test/: TestLexers.cxx
lib/: CMakeLists.txt  exports.hpp  registration.cpp  registration.hpp
lib/about/: About.qml  AboutDialog.qml  CMakeLists.txt  contributors.cpp  contributors.hpp  dependencies.cpp  dependencies.hpp  pepp.cpp  read.cpp  read.hpp  registration.cpp  version.cpp  version.hpp  version_gen.cpp.in
lib/asm/: CMakeLists.txt
lib/bits/: CMakeLists.txt  select.hpp  strings.cpp  strings.hpp
lib/bts/: README.md  architectures.cpp  architectures.hpp  levels.cpp  levels.hpp
lib/builtins/: CMakeLists.txt  Changelog.qml  ChangelogViewer.qml  Figure.qml  Figure2.qml  HelpRoot.qml  MDText.qml  Macro.qml  Topic.qml  book.cpp  book.hpp  book_item_model.cpp  bookfiltermodel.cpp  bookfiltermodel.hpp  changelogmodel.cpp  changelogmodel.hpp  constants.cpp  constants.hpp  elements.hpp  figure.cpp  figure.hpp  helpdata.cpp  helpdata.hpp  helpmodel.cpp  helpmodel.hpp  registration.cpp  registration.hpp  registry.cpp  registry.hpp
lib/components/: CMakeLists.txt  Converters.qml  DisableableComboBox.qml  charcheck.cpp  charcheck.hpp  registration.cpp  registration.hpp
lib/cpu/: CMakeLists.txt  RegisterView.qml  formats.cpp  formats.hpp  registermodel.cpp  registermodel.hpp  statusbitmodel.cpp  statusbitmodel.hpp
lib/enums/: constants.cpp  constants.hpp
lib/help2/: data.hpp  entry.hpp
lib/helpers/: CMakeLists.txt  asmb.cpp  asmb.hpp
lib/isa/: CMakeLists.txt  pep10.cpp  pep10.hpp  pep9.cpp  pep9.hpp  pep_shared.hpp
lib/link/: CMakeLists.txt  bytes.cpp  bytes.hpp  memmap.hpp  mmio.cpp  mmio.hpp
lib/macro/: CMakeLists.txt  macro.cpp  macro.hpp  registered.hpp  types.hpp
lib/memory/: CMakeLists.txt  registration.hpp
lib/menu/: Actions.qml  MainMenu.qml  NativeMainMenu.qml  QMLMainMenu.qml  ShortcutMenuItem.qml
lib/preferences/: CMakeLists.txt  CategoryList.qml  ColorButton.qml  ColorSettings.qml  FontProperties.qml  GroupBoxLabel.qml  NativeMessageDialog.qml  PreferenceDetails.qml  PreferenceList.qml  Preferences.qml  QMLExportDialog.qml  QMLFileDialog.qml  ThemeManagement.qml  preference.cpp  preference.hpp  preference_p.hpp  preferencemodel.cpp  preferencemodel.hpp  registration.hpp  theme.cpp  theme.hpp  themes.hpp  wasm_io.cpp  wasm_io.hpp
lib/project/: BreakpointViewer.qml  CMakeLists.txt  Pep10ASMB.qml  Pep10ISA.qml  Pep9MA2.qml  ProjectLog.qml  Welcome.qml  WelcomeCard.qml  aproject.cpp  aproject.hpp  architectures.cpp  architectures.hpp  features.cpp  features.hpp  levels.cpp  levels.hpp  pep10.cpp  pep10.hpp  projectmodel.cpp  projectmodel.hpp  registration.cpp
lib/settings/: BoxedText.qml  CategoryList.qml  ColorButton.qml  EditorCategoryDelegate.qml  GeneralCategoryDelegate.qml  GroupBoxLabel.qml  KeymapCategoryDelegate.qml  NativeFileDialog.qml  NativeFolderDialog.qml  PaletteDetails.qml  QMLFileDialog.qml  QMLMessageDialog.qml  SimulatorCategoryDelegate.qml  ThemeCategoryDelegate.qml  TopLevel.qml  UnimplementedCategoryDelegate.qml  constants.cpp  constants.hpp  palette.cpp  palette.hpp  paletteitem.cpp  paletteitem.hpp  palettemanager.cpp  palettemanager.hpp  palettemodel.cpp  palettemodel.hpp  settings.cpp  settings.hpp  themes.cpp  themes.hpp  wasm_io.cpp  wasm_io.hpp
lib/sim/: CMakeLists.txt  api2.hpp  utils.hpp
lib/sim3/: README.md  common_macros.hpp  utils.hpp
lib/symtab/: SymbolCell.qml  SymbolViewer.qml  symbolmodel.cpp  symbolmodel.hpp
lib/targets/: CMakeLists.txt
lib/text/: CMakeLists.txt  registration.hpp
lib/top/: DockTabBar.qml  DockTitleBar.qml  EditionSelector.qml  Guest1.qml  Guest2.qml  NewProject.qml  ProjectSelectBar.qml  RecentFiles.qml  SelfTest.qml  SideBar.qml  ToolBar.qml  Welcome.qml  WelcomeArch.qml  WelcomeCard.qml  WelcomeProject.qml  WelcomeTitle.qml  favoritefiguremodel.cpp  favoritefiguremodel.hpp  projectmodel.cpp  projectmodel.hpp  selftest.cpp  selftest.hpp
lib/utils/: CMakeLists.txt  Converters.qml  DisableableComboBox.qml  GreencardView.qml  (+23 more)
pypepp/: .gitignore  CMakeLists.txt  __init__.py  main.py  pyproject.toml
scintilla/: CMakeLists.txt
tests/: CMakeLists.txt  cache-test.cpp  iterator-test.cpp  statistics-test.cpp
ui/: AlignedComboBox.qml  CMakeLists.txt  Diagram.qml  DiagramCanvas.qml  DiagramEditor.qml  DiagramEndpoint.qml  DiagramListView.qml  DiagramProperties.qml  DiagramTableViewDelegate.qml  DragTile.qml  DropTile.qml  GridLine.qml  GridLines.qml  Line.qml  LogicGates.qml  diagramModel.cpp  diagramModel.hpp  diagramdata.cpp  diagramdata.hpp  diagramdatamodel.cpp  diagramdatamodel.hpp  diagramlistmodel.cpp  diagramlistmodel.hpp  diagramproperty.cpp  diagramproperty.hpp  diagramtype.h  frontend_globals.hpp  graphiccanvas.cpp  graphiccanvas.h  graphiccanvas.hpp  move.js  properties.cpp  properties.h  regex.txt
(+4896 files in other folders)
