[project]
name = "pypepp"
version = "0.0.1"
description = "Python bindings for the Pepp assembler and simulator"
requires-python = ">=3.13"
readme = "README.md"
dependencies = []
authors = [
  { name="Matthew McRaven", email="matthew.mcraven@gmail.com" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Matthew-McRaven/Pepp"
Issues = "https://github.com/Matthew-McRaven/Pepp/issues"

[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]

cmake.version = ">=3.20"
wheel.packages = ["pypepp"]
cmake.args = [
  "-DPEPP_BUILD_PYTHON=ON",
  # strongly recommended for wheels:
  "-DCMAKE_BUILD_TYPE=Release",
]