[project]
name = "pypepp"
version = "0.0.1"
description = "Python bindings for the Pepp assembler and simulator"
requires-python = ">=3.13"
readme = "README.md"
dependencies = []
authors = [
  { name="Matthew McRaven", email="matthew.mcraven@gmail.com" },
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Matthew-McRaven/Pepp"
Issues = "https://github.com/Matthew-McRaven/Pepp/issues"

[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "uv-build>=0.9.26",
]
